k3s/beszel/agent.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: beszel-agent
  namespace: beszel
  labels:
    app: beszel-agent
spec:
  selector:
    matchLabels:
      name: beszel-agent
  template:
    metadata:
      labels:
        name: beszel-agent
    spec:
      hostNetwork: true
      containers:
      - name: beszel-agent
        image: henrygd/beszel-agent:latest
        resources:
          limits:
            cpu: 100m
            memory: 64Mi
          requests:
            cpu: 10m
            memory: 32Mi
        volumeMounts:
        - name: proc
          mountPath: /host/proc
          readOnly: true
        - name: sys
          mountPath: /host/sys
          readOnly: true
      volumes:
      - name: proc
        hostPath:
          path: /proc
      - name: sys
        hostPath:
          path: /sys
