k3s/beszel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beszel
  namespace: beszel
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  ingressClassName: traefik
  rules:
    - host: beszel.k3s.dawo9889-homelab.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beszel
                port:
                  name: http
  tls:
    - hosts:
        - beszel.k3s.dawo9889-homelab.ovh
      secretName: beszel-tls
